# finq

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  integration_test.ipynb  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  tests.yml
docs/: README.md  conf.py  finq.datasets.rst  finq.datautil.rst  finq.rst  index.rst  modules.rst
examples/: README.md  mean_variance_cobyla.py
finq/: __init__.py  asset.py  errors.py  exceptions.py  formulas.py  log.py  portfolio.py
finq/datasets/: __init__.py  custom.py  dataset.py  ndx.py  omxs30.py  omxsbesgni.py  omxspi.py  rate_limiter.py  snp500.py
finq/datautil/: __init__.py  cached_rate_limiter.py  nasdaq_requests.py  nasdaq_utils.py  path_utils.py
finq/portfolio/: __init__.py  portfolio.py  solution.py
tests/: __init__.py  test_asset.py  test_portfolio.py
tests/datasets/: __init__.py  custom.py  mock_df.py  test_custom.py  test_ndx.py  test_omxs30.py  test_omxsbesgni.py  test_omxspi.py
tests/datautil/: __init__.py  nasdaq_requests.py  test_nasdaq_requests.py  test_nasdaq_utils.py  test_path_utils.py
