[tool.poetry]
name = "pyfinq"
version = "0.2.0"
description = "🔬 Enabling seamless quantitative finance solutions."
authors = [
    "Wilhelm Ågren <wilhelmagren98@gmail.com>",
]
license = "MIT"
readme = "README.md"

packages = [ {include = "finq" }]
homepage = "https://github.com/wilhelmagren/finq"
repository = "https://github.com/wilhelmagren/finq"
keywords = [
    "finance",
    "nasdaq",
    "investment",
    "yahoo-finance",
    "data-science",
    "time-series",
    "analysis",
    "optimization",
    "data-analysis",
    "quantiative-finance",
    "portfolio-optimization",
    "portfolio-management",
]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[tool.poetry.urls]
"Homepage" = "https://github.com/wilhelmagren/finq"
"Bug tracker" = "https://github.com/wilhelmagren/finq/issues"

# Requirements
[tool.poetry.dependencies]
python = ">=3.9,<3.13"

requests = "^2.31.0"
requests-cache = "^1.1.0"
requests-ratelimiter = "0.4.2"
pyrate-limiter = "^2.8.0"
yfinance = "^0.2.31"
tqdm = "^4.66.1"

pandas = "^2.1.1"
openpyxl = "^3.1.2"
numpy = "^1.26.0"
matplotlib = "^3.8.0"

[tool.poetry.group.dev]
optional = true

# Dev/test requirements
[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
pytest = "^7.4.2"
pyclean = "^2.7.5"
black = "^23.9.1"
ruff = "^0.0.292"


[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 89
ignore = [
    "E401",  # unused imports, we do this in submodule __init__.py files
    "E501",  # line too long error, handled by black
    "E722",  # bare `except`
]

[tool.black]
target-version = [ "py310" ]
line-length = 89
